# lazy-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
benchmarks/: CMakeLists.txt  serialization.cpp  serialization_analyze.py
cmake/: lazy-cpp-config.cmake.in
docs/: serialization.md
examples/: CMakeLists.txt  serializable_examples.cpp
include/lazy/serialization/: binary.h  json.h  json_lazy.h  json_rapid.h  multi_serializable.h  serializable.h  text.h  yaml.h
tests/: CMakeLists.txt
tests/serialization/: CMakeLists.txt  mock_context.h  test_binary.cpp  test_json.cpp  test_json_lazy.cpp  test_json_rapid.cpp  test_multi_serializable.cpp  test_serializable.cpp  test_text.cpp  test_yaml.cpp
